# qobuz-tui

./: Cargo.toml  PKGBUILD  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/qobuz-desktop/: Cargo.toml  tauri.conf.json
crates/qobuz-desktop/capabilities/: default.json
crates/qobuz-desktop/frontend/: index.html  package-lock.json  package.json  vite.config.js
crates/qobuz-desktop/frontend/src/: App.vue
crates/qobuz-desktop/frontend/src/components/: AlbumGrid.vue  AlbumListView.vue  AlbumView.vue  ArtistView.vue  ContextMenu.vue  HomeView.vue  LoginView.vue  PlayerBar.vue  PlaylistDetailView.vue  PlaylistListView.vue  QueuePanel.vue  SearchView.vue  TrackList.vue
crates/qobuz-desktop/frontend/src/composables/: useKeyboard.js  useNotifications.js
crates/qobuz-desktop/src/: commands.rs  main.rs  state.rs
crates/qobuz-lib/: Cargo.toml
crates/qobuz-lib/src/: api.rs  cache.rs  config.rs  error.rs  lib.rs  player.rs  queue.rs  session.rs  stream.rs  streaming.rs
crates/qobuz-lib/tests/: unit_tests.rs
crates/qobuz-tui/: Cargo.toml
crates/qobuz-tui/src/: app.rs  main.rs  sandbox.rs  ui.rs
src/: api.rs  app.rs  cache.rs  config.rs  main.rs  player.rs  sandbox.rs  stream.rs  ui.rs
