[package]
name = "qobuz-tui"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "A terminal-based Qobuz music player"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.7"
rodio = { version = "0.19", features = ["symphonia-all"] }
dirs = "6"
toml = "0.8"
anyhow = "1"
regex = "1"
base64 = "0.22"
landlock = "0.4"
