[package]
name = "qobuz-lib"
version = "0.3.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Qobuz music service library"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.8"
rodio = { version = "0.19", features = ["symphonia-all"] }
dirs = "6"
toml = "0.9.8"
anyhow = "1"
regex = "1"
base64 = "0.22"
rand = "0.9"
